[WebSocket] send() and close() should not throw an exception for an unpaired surrogate but use the replacement character https://bugs.webkit.org/show_bug.cgi?id=101569

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Replace unpaired surrogates with replacing character (U+FFFD) when
encoding text messages and close reasons. This change is aimed at
following the changes on the WebSocket API specification.

Test: http/tests/websocket/tests/hybi/close-reason-too-long.html

* Modules/websockets/WebSocket.cpp:
(WebCore::WebSocket::close):
Use String::StrictConversionReplacingUnpairedSurrogatesWithFFFD mode to encode
text message. Remove invalid utf-8 check.
* Modules/websockets/WebSocketChannel.cpp:
(WebCore::WebSocketChannel::send):
Use String::StrictConversionReplacingUnpairedSurrogatesWithFFFD mode to encode
close reason. Remove invalid utf-8 check.

LayoutTests:

- Updated tests which try to send unpaired surrogates.
  These tests should not throw SYNTAX_ERR.
- Add a test that checks whether WebKit throws SYNTAX_ERR when a close
  reason is too long.

* http/tests/websocket/tests/hybi/close-reason-too-long-expected.txt: Added.
* http/tests/websocket/tests/hybi/close-reason-too-long.html: Ditto.
* http/tests/websocket/tests/hybi/unpaired-surrogates-in-close-reason-expected.txt: Updated.
* http/tests/websocket/tests/hybi/unpaired-surrogates-in-close-reason.html: Ditto.
* http/tests/websocket/tests/hybi/unpaired-surrogates-in-message-expected.txt: Ditto.
* http/tests/websocket/tests/hybi/unpaired-surrogates-in-message.html: Ditto.


Canonical link: https://commits.webkit.org/120240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134515 268f45cc-cd09-0410-ab3c-d52691b4dbfc